# slm-pipeline

./: README.md  deploy.py  main.py  pyproject.toml
config/: config.yaml
data_collection/: pdf_processor.py  web_scraper.py
data_processing/: chunker.py  cleaner.py  generation.py  generation_without_context.py  setup_dataset.py
eval/: evaluate.py  metrics.py  performance.py
training/: train.py
