[project]
name = "slm-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.0",
    "beautifulsoup4>=4.13.4",
    "bitsandbytes>=0.47.0",
    "colored>=2.3.1",
    "datasets>=4.0.0",
    "evaluate>=0.4.5",
    "fastapi>=0.116.1",
    "layoutparser>=0.3.4",
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "openai>=1.99.9",
    "pandas>=2.3.1",
    "pdfplumber>=0.11.7",
    "peft>=0.17.0",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "transformers>=4.55.2",
    "trl>=0.21.0",
    "uvicorn>=0.35.0",
]
